tests/e2e/service_call_require_command2.error
Error: syntax error in story at line 1, column 10

1|    a = echo message:"hello"
               ^^^^^^^^^^^^^^^

E0052: Service calls require a command.
